--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         </title>
     </head>
     <body>
-        My name is Nipun Dinushanka Wiyalagoda
+        My name is Tharushi Dewmini 
+        I am Nipun's Girl
     </body>
 </html>
