--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     </head>
     <body>
         My name is Nipun Dinushanka Wiyalagoda
+        Tharushi Is my loving prince.
+        I want to marry with her. 
     </body>
 </html>
